[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gemato"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
license = {file = "COPYING"}
readme = "README.rst"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"

[project.optional-dependencies]
pretty-log = ["rich"]
wkd-refresh = ["requests"]
test = ["pytest"]
test-full = [
    "pytest",
    "requests",
    "responses",
]

[project.urls]
Homepage = "https://github.com/mgorny/gemato/"

[project.scripts]
gemato = "gemato.cli:setuptools_main"

[tool.flit.sdist]
include = [
    "bin/gemato",
    "tox.ini",
    "tests/*.py",
    "utils",
]
